Fixing everything becoming invisible when selecting in highcontrast mode.

--- a/packages/office-ui-fabric-react/src/components/MarqueeSelection/MarqueeSelection.scss
+++ b/packages/office-ui-fabric-react/src/components/MarqueeSelection/MarqueeSelection.scss
@@ -12,6 +12,10 @@
   top: 0;
   right: 0;
   bottom: 0;
+
+  @media screen and (-ms-high-contrast: active) {
+    background: none;
+  }
 }
 
 .box {
@@ -20,6 +24,10 @@
   border: 1px solid $ms-color-themePrimary;
   pointer-events: none;
   z-index: $ms-zIndex-front;
+
+  @media screen and (-ms-high-contrast: active) {
+    border-color: Highlight;
+  }
 }
 
 .boxFill {
@@ -31,4 +39,8 @@
   top: 0;
   right: 0;
   bottom: 0;
+
+  @media screen and (-ms-high-contrast: active) {
+    background: none;
+  }
 }
